Pokedex/app/src/main/java/com/example/pokedex/data/error/ErrorMessage.kt
package com.example.pokedex.data.error

abstract class ErrorMessage(val messageResource: Int) {
}